[gd_scene load_steps=3 format=3 uid="uid://c6xq7j3m5k2ay"]

[ext_resource type="Script" path="res://scripts/battle/battle.gd" id="1_battle"]
[ext_resource type="PackedScene" uid="uid://cheat_menu_001" path="res://scenes/battle/cheat_menu.tscn" id="2_cheat_menu"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_battle")

[node name="Background" type="ColorRect" parent="."]
mouse_filter = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="GridContainer" type="Node2D" parent="."]
position = Vector2(960, 540)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TurnLabel" type="Label" parent="UI"]
mouse_filter = 2
offset_left = 860.0
offset_top = 20.0
offset_right = 1060.0
offset_bottom = 60.0
horizontal_alignment = 1
text = "Turn: 1"

[node name="PhaseLabel" type="Label" parent="UI"]
mouse_filter = 2
offset_left = 860.0
offset_top = 55.0
offset_right = 1060.0
offset_bottom = 95.0
horizontal_alignment = 1
text = "YOUR TURN"

[node name="ActionsLabel" type="Label" parent="UI"]
mouse_filter = 2
offset_left = 860.0
offset_top = 90.0
offset_right = 1060.0
offset_bottom = 130.0
horizontal_alignment = 1
text = "Actions: 2/2"

[node name="EndTurnButton" type="Button" parent="UI"]
offset_left = 885.0
offset_top = 140.0
offset_right = 1035.0
offset_bottom = 180.0
text = "END TURN"

[node name="BottomBar" type="HBoxContainer" parent="UI"]
offset_left = 760.0
offset_top = 980.0
offset_right = 1160.0
offset_bottom = 1030.0
theme_override_constants/separation = 10
alignment = 1

[node name="AutoButton" type="Button" parent="UI/BottomBar"]
custom_minimum_size = Vector2(100, 40)
text = "AUTO: OFF"

[node name="SpeedSeparator" type="VSeparator" parent="UI/BottomBar"]

[node name="Speed1xButton" type="Button" parent="UI/BottomBar"]
custom_minimum_size = Vector2(50, 40)
toggle_mode = true
button_pressed = true
text = "1x"

[node name="Speed2xButton" type="Button" parent="UI/BottomBar"]
custom_minimum_size = Vector2(50, 40)
toggle_mode = true
text = "2x"

[node name="Speed3xButton" type="Button" parent="UI/BottomBar"]
custom_minimum_size = Vector2(50, 40)
toggle_mode = true
text = "3x"

[node name="PlayerRosterBG" type="ColorRect" parent="UI"]
mouse_filter = 2
offset_left = 20.0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 750.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="PlayerRosterLabel" type="Label" parent="UI"]
mouse_filter = 2
offset_left = 20.0
offset_top = 90.0
offset_right = 200.0
offset_bottom = 120.0
horizontal_alignment = 1
text = "YOUR UNITS"

[node name="PlayerRoster" type="Node2D" parent="UI"]
position = Vector2(20, 120)

[node name="EnemyRosterBG" type="ColorRect" parent="UI"]
mouse_filter = 2
offset_left = 1720.0
offset_top = 120.0
offset_right = 1900.0
offset_bottom = 750.0
color = Color(0.2, 0.15, 0.15, 1)

[node name="EnemyRosterLabel" type="Label" parent="UI"]
mouse_filter = 2
offset_left = 1720.0
offset_top = 90.0
offset_right = 1900.0
offset_bottom = 120.0
horizontal_alignment = 1
text = "ENEMY UNITS"

[node name="EnemyRoster" type="Node2D" parent="UI"]
position = Vector2(1720, 120)

[node name="CombatAnnouncement" type="Label" parent="UI"]
visible = false
offset_left = 460.0
offset_top = 400.0
offset_right = 1460.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
vertical_alignment = 1
text = "DUEL!"

[node name="Instructions" type="Label" parent="UI"]
mouse_filter = 2
offset_left = 560.0
offset_top = 920.0
offset_right = 1360.0
offset_bottom = 1060.0
horizontal_alignment = 1
text = "Click unit: Select | Drag unit: Place on grid | Click ability: Choose
Click pending: Cancel | ESC: Deselect | SPACE: End turn"

[node name="AbilityPanel" type="Panel" parent="UI"]
visible = false
offset_left = 760.0
offset_top = 750.0
offset_right = 1160.0
offset_bottom = 900.0

[node name="AbilityLabel" type="Label" parent="UI/AbilityPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 390.0
offset_bottom = 30.0
horizontal_alignment = 1
text = "Select Ability:"

[node name="Ability1" type="Button" parent="UI/AbilityPanel"]
offset_left = 10.0
offset_top = 35.0
offset_right = 130.0
offset_bottom = 95.0
text = "Strike"

[node name="Ability2" type="Button" parent="UI/AbilityPanel"]
offset_left = 140.0
offset_top = 35.0
offset_right = 260.0
offset_bottom = 95.0
text = "Guard"

[node name="Ability3" type="Button" parent="UI/AbilityPanel"]
offset_left = 270.0
offset_top = 35.0
offset_right = 390.0
offset_bottom = 95.0
text = "Special"

[node name="AbilityDesc" type="Label" parent="UI/AbilityPanel"]
offset_left = 10.0
offset_top = 105.0
offset_right = 390.0
offset_bottom = 145.0
horizontal_alignment = 1
text = "A balanced attack."

[node name="ResultsPanel" type="Panel" parent="UI"]
visible = false
offset_left = 660.0
offset_top = 340.0
offset_right = 1260.0
offset_bottom = 740.0

[node name="ResultsBackground" type="ColorRect" parent="UI/ResultsPanel"]
offset_left = 0.0
offset_top = 0.0
offset_right = 600.0
offset_bottom = 400.0
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="ResultTitle" type="Label" parent="UI/ResultsPanel"]
offset_left = 0.0
offset_top = 60.0
offset_right = 600.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
text = "VICTORY!"

[node name="ResultSubtitle" type="Label" parent="UI/ResultsPanel"]
offset_left = 0.0
offset_top = 140.0
offset_right = 600.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
horizontal_alignment = 1
text = "You completed the battle"

[node name="ButtonContainer" type="HBoxContainer" parent="UI/ResultsPanel"]
offset_left = 100.0
offset_top = 280.0
offset_right = 500.0
offset_bottom = 350.0
theme_override_constants/separation = 40

[node name="PlayAgainButton" type="Button" parent="UI/ResultsPanel/ButtonContainer"]
custom_minimum_size = Vector2(180, 60)
theme_override_font_sizes/font_size = 20
text = "PLAY AGAIN"

[node name="MainMenuButton" type="Button" parent="UI/ResultsPanel/ButtonContainer"]
custom_minimum_size = Vector2(180, 60)
theme_override_font_sizes/font_size = 20
text = "MAIN MENU"

[node name="CheatMenu" parent="." instance=ExtResource("2_cheat_menu")]
